@@ -1,3 +1,8 @@
+2011-02-05  David Bateman  <dbateman@free.fr>
+
+	* plot/legend.m: Add padding to legend positions. Fix for outerposition
+	for southeastoutside and southwestoutside.
+
 2011-02-06  Ben Abbott  <bpabbott@mac.com>
 
 	* plot/legend.m: Align legends to plot box, add demo. Bug 32373.
